--- a/argocd/production/document-processor.yaml
+++ b/argocd/production/document-processor.yaml
@@ -19,9 +19,8 @@ spec:
     server: https://kubernetes.default.svc
     namespace: document-processor
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    # Manual sync required - no 'automated' block
+    # This ensures staging is validated before production deployment
     syncOptions:
       - CreateNamespace=true
 
