--- a/argocd/staging/document-processor.yaml
+++ b/argocd/staging/document-processor.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/YOUR_ORG/document-processor-infra
-    targetRevision: HEAD
+    targetRevision: main
     path: charts/document-processor
     helm:
       valueFiles:
